<!--
Social Distance Meter - An app to analyze and rate your social distancing behavior
Copyright (C) 2020-2021  Mirko Hansen (baaazen@gmail.com)

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Social Distance Meter</string>
    <string name="title_activity_main">Social Distance Meter</string>
    <string name="notification_title">Social Distance Meter</string>
    <string name="app_subtitle">An app to analyze and rate your social distancing behavior</string>

    <string name="placeholder">PLACEHOLDER</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="markdown_error">Error loading markdown from %1$s:\n%2$s</string>

    <string name="national_warn_app_name">@string/official_warn_app_name_de</string>
    <string name="national_warn_app_package_name">@string/official_warn_app_package_name_de</string>
    <string name="date_time_format">%1$s - %2$s</string>

    <!-- country names -->
    <string name="country_de">Germany</string>
    <string name="country_at">Austria</string>

    <!-- MENU: main menu -->
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_about">About</string>
    <string name="menu_main_about_app">App Information</string>
    <string name="menu_main_about_homepage">Homepage</string>
    <string name="menu_main_about_changelog">Changelog</string>
    <string name="menu_main_about_license">License</string>
    <string name="menu_main_about_3rdparty">Third Party Software</string>
    <string name="menu_main_about_privacy">Privacy Policy</string>

    <!-- ABOUT: APP -->
    <string name="about_version">Version: %1$s</string>

    <!-- SETTINGS -->
    <string name="settings_category_scan">Scan settings</string>
    <string name="settings_title_scan_active">Scanning enabled</string>
    <string name="settings_title_scan_period">Scan period</string>
    <string name="settings_title_scan_period_value_1min_rec">1 minute (recommended)</string>
    <string name="settings_title_scan_period_value_2min">2 minutes</string>
    <string name="settings_title_scan_period_value_3min">3 minutes</string>
    <string name="settings_title_scan_period_value_5min">5 minutes</string>
    <string-array name="settings_list_scan_period_description">
        <item>@string/settings_title_scan_period_value_1min_rec</item>
        <item>@string/settings_title_scan_period_value_2min</item>
        <item>@string/settings_title_scan_period_value_3min</item>
        <item>@string/settings_title_scan_period_value_5min</item>
    </string-array>
    <string name="settings_title_scan_location_active">Record location enabled</string>
    <string name="settings_title_scan_location_use_gps">Get location from GPS</string>
    <string name="settings_title_scan_location_period">Record location period</string>
    <string name="settings_title_scan_location_period_value_continuous">Continuous</string>
    <string name="settings_title_scan_location_period_value_5min">5 minutes</string>
    <string name="settings_title_scan_location_period_value_15min_rec">15 minutes (recommended)</string>
    <string name="settings_title_scan_location_period_value_gathering">Gathering detected</string>
    <string-array name="settings_list_scan_location_period_description">
        <item>@string/settings_title_scan_location_period_value_continuous</item>
        <item>@string/settings_title_scan_location_period_value_5min</item>
        <item>@string/settings_title_scan_location_period_value_15min_rec</item>
        <item>@string/settings_title_scan_location_period_value_gathering</item>
    </string-array>
    <string name="settings_category_sync">Diagnosis keys</string>
    <string name="settings_title_risk_sync_enabled">Synchronization enabled</string>
    <string name="settings_category_sync_category_countries">Countries</string>

    <!-- CARD: current informations -->
    <string name="card_current_title">Current environment</string>
    <string name="card_current_waiting_scan_results">Waiting for scan results ...</string>
    <string name="card_current_users_unknown">Unable to count people near you.</string>
    <string name="card_current_users_count_pl_zero">Nobody near you.</string>
    <string name="card_current_users_count_pl_one">%d person near you.</string>
    <string name="card_current_users_count_pl_other">%d people near you.</string>
    <plurals name="card_current_users_count">
        <item quantity="zero">@string/card_current_users_count_pl_zero</item>
        <item quantity="one">@string/card_current_users_count_pl_one</item>
        <item quantity="other">@string/card_current_users_count_pl_other</item>
    </plurals>
    <string name="card_current_distance">Distance</string>

    <!-- CARD: permissions -->
    <string name="card_permissions_title">Required permissions</string>
    <string name="card_permissions_label_background_permission">Always</string>
    <string name="card_permissions_description_location">The purpose of this app is to scan and log tokens sent out of the %1$s via Bluetooth Low Energy (BLE).\nTo be able to collect data from BLE the app requires the permission to access location services.\n\nThe app without the permission to access location services is useless.</string>
    <string name="card_permissions_command_location">Request permission</string>
    <string name="card_permissions_description_background">You already permitted this app to access location service, but only while the app is active.\n\nTo be able to scan in background when this app is not active, the permission "%1$s" is required.</string>
    <string name="card_permissions_command_background">Request permission "%1$s"</string>
    <string name="card_permissions_description_location_background">The purpose of this app is to scan and log tokens sent out of the %1$s via Bluetooth Low Energy (BLE).\nTo be able to collect data from BLE the app requires the permission to access location services.\n\nThe app without the permission to access location services is useless.\nTo be able to scan in background when this app is not active, the permission "%2$s" is required.</string>
    <string name="card_permissions_command_location_background">Request permission "%1$s"</string>

    <!-- CARD: official warn app missing -->
    <string name="card_official_warn_app_missing_title">Official Warn App missing</string>
    <string name="card_official_warn_app_missing_description">It seems like you haven\'t installed an official national Warn App (%1$s). This app is an addition to the official Warn App, not a replacement. You should always, to protect you and your environment, install the official Warn App.\n\nThis warning will disappear when an official Warn App is installed.\n\nIn case you have installed an official Warn App, but this wasn\'t detected by error, please report the problem to the author.</string>
    <string name="card_official_warn_app_missing_command_install">Open %1$s in Play Store</string>

    <!-- CARD: risks -->
    <string name="card_risks_title">Risks</string>
    <string name="card_risks_last_update_never">Never synchronized</string>
    <string name="card_risks_last_update_date">Last synchronization: %1$s</string>
    <string name="card_risks_diag_key_count"># of diagnosis keys: %1$s</string>
    <string name="card_risks_start_sync_command">Synchronize diagnosis keys</string>
    <string name="card_risks_sync_status_starting_download">Starting to download keys ...</string>
    <string name="card_risks_sync_status_download_country">Downloading keys for %1$s</string>
    <string name="card_risks_sync_status_starting_compare">Starting to compare keys ...</string>
    <string name="card_risks_sync_status_comparing">Comparing diagnosis keys %1$s (%2$d%% done)</string>
    <string name="card_risks_sync_status_error_unknown">Unknown error</string>
    <string name="card_risks_sync_status_error_download">Error downloading diagnosis keys.</string>
    <string name="card_risks_sync_status_error_checking">Error checking diagnosis keys.</string>
    <string name="card_risks_encounters_no_risk">No risk encounters detected</string>
    <string name="card_risks_encounters_waiting">Loading encounters ...</string>
    <string name="card_risks_encounters_details_count"># of encounters: %1$s</string>
    <string name="card_risks_encounters_details_recent">Recent encounter: %1$s</string>
    <string name="card_risks_encounters_details_command">Show encounter details</string>

    <!-- NOTIFICATION: syncing diag keys -->
    <string name="notification_sync_title">Synchronizing diagnosis keys ...</string>
</resources>
